--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -4,9 +4,9 @@
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a (click)="goToWebsites()" class="navbar-link">
+        <button (click)="goToWebsites()" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
+        </button>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand">
@@ -16,16 +16,16 @@
         </a>
       </div>
       <p class="navbar-brand pull-right">
-        <a class="navbar-link">
+        <button class="navbar-link jj-button">
           <span class="glyphicon glyphicon-plus"></span>
-        </a>
+        </button>
       </p>
     </div>
     <div class="col-sm-9">
       <div class="navbar-brand pull-left">
-        <a (click)="goToPages()" class="navbar-link">
+        <button (click)="goToPages()" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
+        </button>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand thick">
@@ -36,9 +36,9 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a (click)="commit(Name.value, Description.value)" class="navbar-link">
+        <button (click)="commit(Name.value, Description.value)" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-ok"></span>
-        </a>
+        </button>
       </p>
     </div>
   </div>
@@ -56,9 +56,9 @@
               </a>
             </div>
             <div class="col-xs-3">
-              <a class="pull-right" (click)="editPage(page._id)">
+              <button class="jj-button-cog pull-right" (click)="editPage(page._id)">
                 <span class="glyphicon glyphicon-cog"></span>
-              </a>
+              </button>
             </div>
           </div>
         </li>
@@ -105,9 +105,9 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <div class="container-fluid">
         <p class="navbar-brand pull-right">
-          <a (click)="goToProfile()">
+          <button class="jj-button-cog" (click)="goToProfile()">
             <span class="glyphicon glyphicon-user"></span>
-          </a>
+          </button>
         </p>
       </div>
     </nav>
