--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -11,9 +11,9 @@
     </p>
 
     <p class="navbar-text pull-right">
-      <a (click)="goToProfile()" class="navbar-link">
-        <span class="glyphicon glyphicon-ok"></span>
-      </a>
+      <button (click)="goToProfile()"  class="navbar-link jj-button">
+        <span class="jj-button-text glyphicon glyphicon-ok"></span>
+      </button>
     </p>
   </div>
 </nav>
@@ -81,9 +81,9 @@
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-text pull-right">
-      <a (click)="goToProfile()">
+      <button class="jj-button" (click)="goToProfile()">
         <span class="glyphicon glyphicon-user"></span>
-      </a>
+      </button>
     </p>
   </div>
 </nav>
