--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -4,9 +4,9 @@
   <div class="container-fluid">
     <div class="col-sm-3 hidden-xs">
       <div class="navbar-brand pull-left">
-        <a (click)="goToProfile()" class="navbar-link">
+        <button (click)="goToProfile()" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
+        </button>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand">
@@ -16,16 +16,16 @@
         </a>
       </div>
       <p class="navbar-brand pull-right">
-        <a class="navbar-link" (click)="goToNewWebsite()">
+        <button class="navbar-link jj-button" (click)="goToNewWebsite()">
           <span class="glyphicon glyphicon-plus"></span>
-        </a>
+        </button>
       </p>
     </div>
     <div class="col-sm-9">
       <div class="navbar-brand pull-left">
-        <a (click)="cancel()" class="navbar-link">
+        <button (click)="cancel()" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-remove"></span>
-        </a>
+        </button>
       </div>
       <div class="navbar-header pull-left">
         <a class="navbar-brand thick">
@@ -36,9 +36,9 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <a (click)="commit(Name.value, Description.value)" class="navbar-link">
+        <button (click)="commit(Name.value, Description.value)" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-ok"></span>
-        </a>
+        </button>
       </p>
     </div>
   </div>
@@ -56,9 +56,9 @@
               </a>
             </div>
             <div class="col-xs-3">
-              <a (click)="editWebsite(website._id)" class="pull-right">
+              <button (click)="editWebsite(website._id)" class="pull-right jj-button-cog">
                 <span class="glyphicon glyphicon-cog"></span>
-              </a>
+              </button>
             </div>
           </div>
         </li>
@@ -105,9 +105,9 @@
 <nav class="navbar navbar-default_blue navbar-fixed-bottom">
   <div class="container-fluid">
     <p class="navbar-brand pull-right">
-      <a (click)="goToProfile()">
+      <button class="jj-button" (click)="goToProfile()">
         <span class="glyphicon glyphicon-user"></span>
-      </a>
+      </button>
     </p>
   </div>
 </nav>
