--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -27,9 +27,11 @@
         </div>
         <div *ngSwitchCase="'IMAGE'">
           <ul><a (click)="editWidget(widget._id)"> Image </a></ul>
+          <app-widget-image></app-widget-image>
         </div>
         <div *ngSwitchCase="'YOUTUBE'">
           <ul><a (click)="editWidget(widget._id)"> YouTube </a></ul>
+          <app-widget-youtube></app-widget-youtube>
         </div>
       </div>
     </div>
