--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -43,18 +43,19 @@
     <div class="col-sm-3 hidden-xs">
       <nav class="jj-widget-chooser-padding">
         <div *ngFor="let widget of widgets">
-          <!--<app-widget-edit></app-widget-edit>-->
-
           <div [ngSwitch]="widget.widgetType">
             <div *ngSwitchCase="'HEADING'">
               <ul><a (click)="editWidget(widget._id)"> Header</a></ul>
+              <!--<app-widget-header></app-widget-header>-->
             </div>
             <div *ngSwitchCase="'IMAGE'">
               <ul><a (click)="editWidget(widget._id)"> Image </a></ul>
+              <!--<app-widget-image></app-widget-image>-->
             </div>
             <div *ngSwitchCase="'YOUTUBE'">
               <ul><a (click)="editWidget(widget._id)"> YouTube </a></ul>
             </div>
+            <!--<app-widget-edit [widget]="widget"></app-widget-edit>-->
           </div>
         </div>
         <ul><a (click)="chooseWidget()"> Label </a></ul>
