--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -43,17 +43,17 @@
     <div class="col-sm-3 hidden-xs">
       <nav class="jj-widget-chooser-padding">
         <div *ngFor="let widget of widgets">
-          <!--<app-widget-edit></app-widget-edit>-->
-
           <div [ngSwitch]="widget.widgetType">
             <div *ngSwitchCase="'HEADING'">
               <ul><a (click)="editWidget(widget._id)"> Header</a></ul>
             </div>
             <div *ngSwitchCase="'IMAGE'">
               <ul><a (click)="editWidget(widget._id)"> Image </a></ul>
+              <!--<app-widget-image></app-widget-image>-->
             </div>
             <div *ngSwitchCase="'YOUTUBE'">
               <ul><a (click)="editWidget(widget._id)"> YouTube </a></ul>
+              <!--<app-widget-youtube></app-widget-youtube>-->
             </div>
           </div>
         </div>
