--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -19,9 +19,9 @@
     </div>
   </nav>
   <nav class="jj-widget-chooser-padding">
-    <ul><button class="jj-button-cog" (click)="chooseWidget()"> Header</button></ul>
-    <ul><button class="jj-button-cog" (click)="chooseWidget()"> Image</button></ul>
-    <ul><button class="jj-button-cog" (click)="chooseWidget()"> YouTube</button></ul>
+    <ul><button class="jj-button-cog" (click)="makeWidget('HEADING')"> Header</button></ul>
+    <ul><button class="jj-button-cog" (click)="makeWidget('IMAGE')"> Image</button></ul>
+    <ul><button class="jj-button-cog" (click)="makeWidget('YOUTUBE')"> YouTube</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> Label</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> HTML</button></ul>
     <ul><button class="jj-button-cog" (click)="chooseWidget()"> Text Input</button></ul>
