Updated adding and editing widgets

--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -16,7 +16,7 @@
       </div>
 
       <p class="navbar-brand pull-right">
-        <button (click)="goToWidgets()" class="navbar-link jj-button">
+        <button (click)="commit(width.valueOf(), url.valueOf())" class="navbar-link jj-button">
           <span class="glyphicon glyphicon-ok"></span>
         </button>
       </p>
