--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <p class="navbar-brand pull-right">
-      <button (click)="goToWidgets()" class="navbar-link jj-button">
+      <button (click)="commit(text.valueOf(), size.valueOf())" class="navbar-link jj-button">
         <span class="glyphicon glyphicon-ok"></span>
       </button>
     </p>
@@ -38,28 +38,30 @@
     </form>
     <form class="jj-form">
       <div class="form-group">
-        <label for="Text">
+        <label for="text">
           Text
         </label>
         <input [(ngModel)]="text"
                placeholder="Animals"
-               name="Text"
+               name="text"
                id="text"
                class="form-control"
-               type="text"/>
+               type="text"
+               />
       </div>
     </form>
     <form class="jj-form">
       <div class="form-group">
-        <label for="Size">
+        <label for="size">
           Size
         </label>
         <input [(ngModel)]="size"
-               name="Size"
-               id="Size"
+               name="size"
+               id="size"
                class="form-control"
                type="number"
-               value="3"/>
+               value="3"
+               />
       </div>
     </form>
     <button (click)="goToWidgets()"
